# Localsumm

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/localsumm/: __init__.py  cli.py  config.py  exceptions.py  file_processor.py  llm_interaction.py  main.py  transcription.py  utils.py  youtube_processor.py
tests/: test_files.py  test_interaction.py  test_transcription.py  test_youtube.py
